# SPH-Fluid-Sim

./: Anotacoes.md  CLAUDE.md  CMakeLists.txt  README.md  install.sh  run.sh
include/math/: mat4.h  vec3.h
shaders/axis/: axis.frag  axis.vert
shaders/particle/: particle.frag  particle.vert
shaders/triangle/: triangle.frag  triangle.vert
src/: main.cpp
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
